# Parser-Senpai

./: ParserSenpai.py  README.md  pyproject.toml  requirements.txt
samples/: sample_scheme.json
